# voxel-world

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  NETWORKING.md  README.md  SYNC.md  audit.md  boundry_refactor.md  build.rs  custom_textures.json  hn_release.md  ideas.md  ladder_debug.md  large_file_refactor.md  launcher.json  nano-bannana-mcp.json~  picture_frame.md  plan.md  ralph-multiplayer-sync.md  reddit_release.md  refactor.md  sprite_gen.md  sub_voxel_debug.md  voxel_world_layer_infographic.html  work.md
.claude/: ralph-state.json  settings.json
.claude/hooks/: cargo-check.sh
.claude/skills/: layer-viz.md
.claude/skills/layer-viz/: SKILL.md
.claude/skills/voxel-texture/: SKILL.md  generate_texture.sh
.gemini/: settings.json
.github/workflows/: ci.yml  publish-crates.yml  release.yml
docs/: ARCHITECTURE.md  CLI.md  DOCUMENTATION_STYLE_GUIDE.md  MODEL_EDITOR.md  NETWORKING.md  PHYSICS.md  QUICKSTART.md  RENDERING.md  TEXTURE_EDITOR.md  WORLD_EDIT.md
docs/plans/: 2026-02-19-custom-asset-sync-design.md  2026-02-19-custom-asset-sync.md  plan.md
docs/research/: gpu-voxel-ray-marching-optimizations-2025-12-29.md  infinite-voxel-world-optimization-2025-12-28.md  mc-biome-final.md  mc-biome.md  new_gen_plan.md  physics-algorithms-quick-reference-2025-12-28.md  voxel-optimization-quick-reference.md  voxel-physics-and-water-simulation-2025-12-28.md  voxel-tree-generation-algorithms.md  vw_final.md
models/: README.md
scripts/: README.md  bench_stats.sh  generate_layer_viz.py
shaders/: accel.glsl  common.glsl  generated_constants.glsl  lighting.glsl  materials.glsl  models.glsl  overlays.glsl  resample.comp  sky.glsl  transparency.glsl  traverse.comp  util.glsl
src/: app_hud.rs  app_input.rs  app_minimap.rs  app_stats.rs  atmosphere.rs  block_interaction.rs  block_update.rs  camera.rs  cave_gen.rs  chunk.rs  chunk_loader.rs  config.rs  constants.rs  falling_block.rs  gpu_error.rs  gpu_resources.rs  hot_reload.rs  hud.rs  hud_render.rs  hud_render.rs.backup  launcher_config.rs  lava.rs  main.rs  particles.rs  player.rs  player.rs.bak  raycast.rs  remote_player.rs  render_mode.rs  sprite_gen.rs  sub_voxel.rs  sub_voxel_builtins.rs  svt.rs  terrain_gen.rs  thermal.rs  user_prefs.rs  utils.rs  vulkan_context.rs  water.rs  world.rs  (+2 more)
src/app/: core.rs  event_handler.rs  helpers.rs  hud.rs  init.rs  input.rs  minimap.rs  mod.rs  network_sync.rs  render.rs  stats.rs  update.rs
src/app_state/: graphics.rs  input_state.rs  mod.rs  multiplayer.rs  palette.rs  profiling.rs  simulation.rs  ui_state.rs  ui_substates.rs
src/block_interaction/: mod.rs  physics.rs  placement.rs  shape_tools.rs
src/console/: mod.rs
src/console/commands/: boxme.rs  copy.rs  fill.rs  floodfill.rs  locate.rs  locate_async.rs  measure.rs  mod.rs  picture.rs  positions.rs  select.rs  sphere.rs  stencil.rs  template.rs  texture.rs  tp.rs
src/editor/: mod.rs  rasterizer.rs  ui.rs
src/net/: auth.rs  bandwidth_test.rs  block_sync.rs  channel.rs  chunk_sync.rs  client.rs  day_cycle_sync.rs  discovery.rs  extended_gameplay_sync.rs  falling_block_sync.rs  fluid_sync.rs  lava_sync.rs  mod.rs  picture_store.rs  player_sync.rs  protocol.rs  server.rs  server_thread.rs  texture_slots.rs  tree_fall_sync.rs  water_sync.rs
src/paint/: mod.rs  presets.rs  system.rs
src/pictures/: atlas.rs  editor.rs  library.rs  mod.rs  ui.rs
src/placement/: helpers.rs  mod.rs
src/preview/: mod.rs
src/shape_tools/: arch.rs  bezier.rs  bridge.rs  circle.rs  clone.rs  cone.rs  cube.rs  cylinder.rs  floor.rs  helix.rs  hollow.rs  mirror.rs  mod.rs  pattern.rs  polygon.rs  replace.rs  scatter.rs  sphere.rs  stairs.rs  terrain_brush.rs  torus.rs  wall.rs
src/stencils/: format.rs  mod.rs  placement.rs  rasterizer.rs  state.rs  ui.rs
src/storage/: fluid_sources.rs  format.rs  metadata.rs  mod.rs  model_format.rs  region.rs  stencil_state.rs  worker.rs
src/sub_voxel/: mod.rs  model.rs  registry.rs  types.rs
src/sub_voxel/builtins/: basic.rs  caves.rs  doors.rs  fences.rs  frames.rs  glass_panes.rs  lighting.rs  mod.rs  stairs.rs  vegetation.rs
src/templates/: format.rs  mod.rs  placement.rs  rasterizer.rs  selection.rs  thumbnail.rs  ui.rs
src/textures/: canvas.rs  generator.rs  import.rs  mod.rs  patterns.rs
src/ui/: arch_tool.rs  bezier_tool.rs  bridge_tool.rs  circle_tool.rs  clone_tool.rs  cone_tool.rs  console.rs  cube_tool.rs  cylinder_tool.rs  floor_tool.rs  helix_tool.rs  helpers.rs  hollow_tool.rs  hotbar.rs  minimap.rs  mirror_tool.rs  mod.rs  multiplayer.rs  paint_panel.rs  palette.rs  pattern_tool.rs  polygon_tool.rs  replace_tool.rs  scatter_tool.rs  settings.rs  sphere_tool.rs  stairs_tool.rs  stats.rs  terrain_brush_tool.rs  texture_generator.rs  time.rs  tools.rs  torus_tool.rs  wall_tool.rs
src/world/: connections.rs  lighting.rs  mod.rs  query.rs  stair_logic.rs  storage.rs  tests.rs  tree_logic.rs  world_gen.rs
src/world_gen/: benchmark.rs  mod.rs
src/world_gen/biome/: mod.rs
src/world_init/: generation.rs  mod.rs  spawn.rs
user_stencils/: P-stencil.vxs
user_templates/: P.vxt  R.vxt
(+24 files in other folders)
