[package]
name = "voxel-world"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
vulkano = "0.35.2"
winit = "0.30.12"

shaderc = "0.8.3"
egui_winit_vulkano = "0.28.0"
winit_input_helper = { git = "https://github.com/rukai/winit_input_helper", rev = "638b12fe73b8eb08ed9a8a107d554f4c3b99e8cf" }

nalgebra = { version = "0.34.1", features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }

notify = "8.2.0"
ply-rs = "0.1.3"

image = "0.25.9"
crossterm = "0.29.0"
noise = "0.9.0"
clap = { version = "4.5.57", features = ["derive"] }
rayon = "1.11.0"
zstd = "0.13.3"
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
dirs = "6.0.0"
rfd = "0.17.2"

# Networking
renet = "2.0"
renet_netcode = "2.0"
lz4_flex = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
log = "0.4"
env_logger = "0.11"
png = "0.18.1"

# macOS cursor handling (winit's set_cursor_visible crashes)
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSCursor"] }

[dev-dependencies]
tempfile = "3.25.0"
